force-app/main/default/objects/Trigger_Management__c/Trigger_Management__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Enables bypassing of triggers. Field names should match the name of the trigger handler without the TriggerHandler suffix. Eg. AccountTriggerHandler would be bypassed by a field named &apos;Account&apos; (API name Account__c)</description>
    <label>Trigger Management</label>
</CustomObject>