force-app/main/default/objects/Trigger_Management__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Bypass AccountTriggerHandler for Account object</inlineHelpText>
    <label>Account</label>
    <type>Checkbox</type>
</CustomField>