force-app/main/default/objects/Trigger_Management__c/fields/CustomerProduct__c.field-meta.xml
<CustomField>
    <fullName>CustomerProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enables bypassing of the CustomerProductTriggerHandler for the Customer_Product__c object</inlineHelpText>
    <label>CustomerProduct</label>
    <type>Checkbox</type>
</CustomField>