force-app/main/default/objects/Trigger_Management__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Test field for unit testing the bypass functionality</inlineHelpText>
    <label>Test</label>
    <type>Checkbox</type>
</CustomField>